tests/baselines/reference/inheritanceGrandParentPrivateMemberCollisionWithPublicMember.errors.txt
tests/cases/compiler/inheritanceGrandParentPrivateMemberCollisionWithPublicMember.ts(7,7): error TS2416: Class 'C' incorrectly extends base class 'B':
  Property 'myMethod' is private in type 'B' but not in type 'C'.


==== tests/cases/compiler/inheritanceGrandParentPrivateMemberCollisionWithPublicMember.ts (1 errors) ====
    class A {
        private myMethod() { }
    }
    
    class B extends A { }
    
    class C extends B {
          ~
!!! error TS2416: Class 'C' incorrectly extends base class 'B':
!!! error TS2416:   Property 'myMethod' is private in type 'B' but not in type 'C'.
        public myMethod() { }
    }
    